<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_bottom_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/corner_bottom_content"
    android:paddingStart="@dimen/padding_content_horizontal"
    android:paddingTop="@dimen/padding_content_vertical"
    android:paddingEnd="@dimen/padding_content_horizontal">

    <TextView
        android:id="@+id/tv_title_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/phone_num_login"
        android:textColor="@color/textPrimaryDark"
        android:textSize="@dimen/content_title_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="14dp"
        android:layout_height="21dp"
        android:src="@drawable/dl_icon_phone"
        app:layout_constraintBottom_toBottomOf="@+id/et_phone_num"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_phone_num" />

    <TextView
        android:id="@+id/tv_area_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="+86"
        android:textColor="@color/textHint"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_phone_num"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/et_phone_num" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_phone_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:hint="@string/please_enter_phone_num"
        android:inputType="phone|number"
        android:maxLength="11"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_area_code"
        app:layout_constraintTop_toBottomOf="@id/tv_title_phone" />

    <TextView
        android:id="@+id/tv_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_login_hint"
        android:textColor="@color/textHint"
        app:layout_constraintEnd_toEndOf="@+id/et_phone_num"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_num" />

    <TextView
        android:id="@+id/tv_error_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textWarning"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/tv_prompt"
        app:layout_constraintTop_toBottomOf="@+id/tv_prompt" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_verification_code"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="71dp"
        android:background="@drawable/selector_action_button"
        android:enabled="false"
        android:text="@string/get_verification_code"
        android:textColor="@color/textPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_num" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_protocols_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="14sp"
        android:text="@string/protocols_prompt"
        android:textColor="@color/textHint"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>