<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bottom_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/corner_bottom_content"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="43dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:text="@string/user_agreement"
            android:textSize="@dimen/content_title_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="356dp"
                android:text="@string/user_agreement_content"
                android:textColor="#666666"
                android:textSize="14sp" />
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_agree"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_action_button"
            android:text="@string/agree_and_authorize"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_disagree"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_disagree"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_btn_grey"
            android:text="@string/disagree"
            android:textColor="#999999"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_agree"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="45dp"
        android:elevation="6dp"
        android:src="@drawable/dl_img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>