<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/corner_bottom_content"
    android:paddingStart="@dimen/padding_content_horizontal"
    android:paddingTop="@dimen/padding_content_vertical"
    android:paddingEnd="@dimen/padding_content_horizontal">

    <TextView
        android:id="@+id/tv_title_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Input_verification_code"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@color/textPrimaryDark"
        android:textSize="@dimen/content_title_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_resend"
        android:layout_width="75dp"
        android:layout_height="22dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/selector_action_button"
        android:text="@string/resend_verification_code"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/content_subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title_phone" />

    <TextView
        android:id="@+id/tv_verification_send_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="验证码已发送至+86 186 8888 6666"
        android:textColor="@color/textHint"
        android:textSize="@dimen/content_subtitle_size"
        app:layout_constraintStart_toStartOf="@+id/tv_title_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_phone" />

    <com.soundai.azero.azeromobile.ui.widget.CaptchaInputView
        android:id="@+id/civ_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@null"
        app:captchaLength="6"
        app:captchaViewSize="30dp"
        app:captchaViewPadding="26dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_verification_send_hint"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/tv_error_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_code_wrong_input"
        android:textColor="@color/textWarning"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civ_verification" />
</androidx.constraintlayout.widget.ConstraintLayout>